    Cambios en la gestión de inputs de GameUi para hacer las interacciones más fluidas.
07/02/23
    Ahora hay una pantalla de "ready" para que el jugador pueda prepararse y otras dos de game over y de victoria.
    Para mejorar la usabilidad, los botones de construir torre ahora indican el precio de la misma. En amarillo si se tiene suficiente oro y en rojo si no.
    Mejoras generales de claridad y simplicidad de código. Le hacía falta.
08/02/23
    Mejoras generales de la UI, ahora hay iconos animados para el oro y las vidas gracias a la clase SimpleIcon.
09/02/23
    Ahora las fundation reproducen una pequeña animación al seleccionarse para que sea más claro cual es la que ha pulsado el jugador.
    ¡Nueva habilidad! Al pulsar el botón Rage (o agitar el movil), si se tiene suficiente oro, las torres atacarán mucho más rapido durante unos segundos.
    Se han comentado apropiadamente las clases en enemies y tiles.
13/02/23
    Se descarta la mecánica del Loot. Rage es más interesante y más intuitivo, y requiere que el usuario maree menos el teléfono agitandolo.
    Se borran las clases y menciones a la mecánica del Loot en el código.
    Mejoras en el código del renderizado, ahora es más eficiente.
    Ahora los enemigos y las torres se 'mueven' (velocidad de la animación) más rápido o lento según el estado (rage/ralentizado).
    Ahora el botón Rage puede activarse agitandose!
    Añadida nueva pantalla, MainMenuScreen! Ahora el juego se iniciará al menú en vez de directamente al juego.
14/02/23
    Añadido vibrador: El móvil vibra al pulsar el botón Rage (o agitar el móvil) y cada vez que un enemigo escapa.
    Corregido problema importante de rendimiento con las Skin: Debo ser más cuidadoso a la hora de gestionar recursos.
    Añadido el segundo mapa! Es completamente jugable.
    Trabajando con los menus ahora para permitir escoger mapa desde el propio juego.