@@ -16,23 +16,44 @@ import com.mygdx.actors.tiles.Direction;
 import com.mygdx.actors.tiles.Tile;
 import com.mygdx.actors.tiles.Type;
 
+/**
+ * Esta clase gestiona el parseado de objetos del mapa (Tiles)
+ */
 public class LevelCreator {
 
+    /**
+     * Referencia del mapa a parsear
+     */
     private TiledMap map;
 
-    private Array<Tile> directionTiles = new Array<Tile>();
-    private Array<Tile> fundationTiles = new Array<Tile>();
+    /**
+     * Arrays de los objetos parseados
+     */
+    private Array<Tile> directionTiles, fundationTiles;
 
-    private Tile spawnTile;
-    private Tile finishTile;
+    /**
+     * Tiles de spawn de enemigos y final de recorrido
+     */
+    private Tile spawnTile, finishTile;
 
-    public TiledMap setLevel(String path) {
-        map = new TmxMapLoader().load(path);
+    /**
+     * Parsea los objetos de un mapa que se le pasa como parámetro
+     * @param map El TiledMap a parsear
+     */
+    public void setLevel(TiledMap map) {
+        this.map = map;
+        //Se reasignan los arrays a uno nuevo cada vez que se llama al método
+        directionTiles = new Array<Tile>();
+        fundationTiles = new Array<Tile>();
+        //Se parsean los objetos del mapa. En mis TiledMaps, hay dos capas de objetos: Metadata y Directions, cada una con su método correspondiente
         parseMetadataObjects(map.getLayers().get("Metadata").getObjects());
         parseDirectionObjects(map.getLayers().get("Directions").getObjects());
-        return map;
     }
 
+    /**
+     * Crea nuevos Tiles de tipo SPAWN, FINISH_LINE y FUNDATION en función de los objetos parseados del mapa
+     * @param mapObjects El array de objetos de la capa escogida del TiledMap
+     */
     private void parseMetadataObjects(MapObjects mapObjects) {
         for (MapObject mapObject : mapObjects) {
 
@@ -58,6 +79,10 @@ public class LevelCreator {
         }
     }
 
+    /**
+     * Crea nuevos Tiles de tipo ROAD con su correspondiente Direction en función de los objetos parseados del mapa
+     * @param mapObjects El array de objetos de la capa escogida del TiledMap
+     */
     private void parseDirectionObjects(MapObjects mapObjects) {
         for (MapObject mapObject : mapObjects) {
 
@@ -85,6 +110,10 @@ public class LevelCreator {
                 }
             }
         }
+    }
+
+    public TiledMap getMap() {
+        return map;
     }
 
     public Array<Tile> getDirectionTiles() {
